<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="movie"
            type="woowacourse.movie.model.Movie" />
        <variable
            name="count"
            type="woowacourse.movie.model.Count" />
        <variable
            name="screeningPeriod"
            type="String" />
        <variable
            name="presenter"
            type="woowacourse.movie.presentation.ticketing.TicketingPresenter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ticketing.TicketingActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_form"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="0dp"
                android:layout_height="340dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                imgResource="@{movie.thumbnail}"
                tools:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@{movie.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_thumbnail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/item_movie_screen_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:text="@{screeningPeriod}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_date_head"
               app:layout_constraintBaseline_toBaselineOf="@id/tv_date_head" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_running_time_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:text="@string/item_movie_running_time"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_running_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxLines="1"
                android:text="@{String.valueOf(movie.runningTime)}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_running_time_head"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_running_time_head"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_running_time_tail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxLines="1"
                android:text="분"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_running_time"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_running_time_head"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_introduction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@{movie.introduction}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_running_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <Spinner
        android:id="@+id/sp_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/sp_time_slot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="@id/gl_form" />

    <Spinner
        android:id="@+id/sp_time_slot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/sp_date"
        app:layout_constraintTop_toTopOf="@id/sp_date" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/text_minus_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:onClick="@{() -> presenter.decreaseCount()}"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/sp_date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_minus"
        android:text="@{String.valueOf(count.value)}"
        tools:text="1" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/text_plus_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="@{() -> presenter.increaseCount()}"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintBottom_toBottomOf="@id/btn_minus"
        app:layout_constraintTop_toTopOf="@id/btn_minus" />

    <Button
        android:id="@+id/btn_choose_seat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_select_seat_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        android:onClick="@{() -> presenter.navigate()}"
        app:layout_constraintTop_toBottomOf="@id/btn_plus"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
