...
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="@{()->clickListener.onClick(bookedTicket)}">

        <TextView
            android:id="@+id/tv_screening_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12.5dp"
            android:text="@{stringFormatter.toDate(bookedTicket.movieSchedule.screeningDateTime)}"
            android:textColor="@color/black"
...
