...
                android:onClick="decrease"
                android:text="@string/reservation_count_minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_reservation_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
...
