<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="reservationInfo"
            type="woowacourse.movie.presentation.model.ReservationInfoUiModel" />

        <variable
            name="money"
            type="Integer" />

        <variable
            name="canPublish"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_ea"
        tools:context=".presentation.view.home.reservation.seat.ReservationSeatFragment">

        <TextView
            android:id="@+id/tv_screen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@color/gray_49"
            android:paddingVertical="4dp"
            android:text="@string/reservation_select_seats_screen"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv_seats"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintBottom_toTopOf="@id/ll_reservation_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_screen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="28dp" />

                <TableLayout
                    android:id="@+id/tb_seats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="28dp" />
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_reservation_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_seats_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{reservationInfo.title}"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="해리 포터와 마법사의 돌" />

            <TextView
                android:id="@+id/tv_seats_total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@{String.format(@string/reservation_select_total_price_format , money)}"
                android:textColor="@color/gray_72"
                android:textSize="18sp"
                tools:text="0원" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@{canPublish ? @color/purple_62 : @color/gray_b7}"
            android:enabled="@{canPublish}"
            android:text="@string/reservation_select_seats_confirm"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ll_reservation_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_reservation_status"
            app:layout_constraintTop_toTopOf="@id/ll_reservation_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
